@startuml
' Service layer UML diagram
skinparam linetype ortho
skinparam classAttributeIconSize 0

' ==============================
'  CONTROLLER LAYER
' ==============================
package "VoterSystem.WebAPI.Controllers" {

    class "ChoiceController" {
        - votingService : readonly IVotingService
        - voteChoiceService : readonly IVoteChoiceService

        + GetChoices(long votingId) : Task<IActionResult>
        + GetChoiceById(long votingId, long choiceId) : Task<IActionResult>
        + CreateChoice(long votingId, VoteChoiceRequestDto voteChoice) : Task<IActionResult>
        + CreateChoice(long votingId, long choiceId) : Task<IActionResult>
    }

    class "HealthController" {
        - db : readonly VoterSystemDbContext

        + CheckHealthAsync(HealthCheckContext context, CancellationToken cancellationToken = new()) : Task<HealthCheckResult>
    }

    class "UserController" {
        - userService : readonly IUserService
        - emailService : readonly IEmailService
        - _blazorSettings : readonly BlazorSettings

        + RegisterAsync(UserRegisterRequestDto request) : Task<IActionResult>
        + LoginAsync(UserLoginRequestDto request) : Task<IActionResult>
        + GetAllUsersAsync() : Task<IActionResult>
        + GetCurrentUserAsync() : Task<IActionResult>
        + GetUserByIdAsync(Guid id) : Task<IActionResult>
        + ChangePasswordAsync(UserChangePasswordRequestDto dto) : Task<IActionResult>
        + RequestEmailConfirm() : Task<IActionResult>
        + ConfirmEmail(UserEmailConfirmRequestDto dto) : Task<IActionResult>
        + RequestPasswordReset(string email) : Task<IActionResult>
        + ResetPassword(UserPasswordResetRequestDto dto) : Task<IActionResult>
        + LogoutAsync() : Task<IActionResult>
        + PromoteToAdminAsync(Guid userId) : Task<IActionResult>
        + DemoteToUserAsync(Guid userId) : Task<IActionResult>
        + RefreshTokenAsync(string refreshToken) : Task<IActionResult>
    }

    class "VoteController" {
        - userService : readonly IUserService
        - voteChoiceService : readonly IVoteChoiceService
        - voteService : readonly IVoteService
        - voteNotificationService : readonly IVoteNotificationService

        + CastVoteAsync(long choiceId) : Task<IActionResult>
        + GetMyVotes() : Task<IActionResult>
    }

    class "VotingController" {
        - votingService : readonly IVotingService
        - voteService : readonly IVoteService
        - userService : readonly IUserService

        + GetVotings() : Task<IActionResult>
        + GetVotableVotings() : Task<IActionResult>
        + GetVotedVotings() : Task<IActionResult>
        + GetVotingById(long id) : Task<IActionResult>
        + GetVotingResults(long id) : Task<IActionResult>
        + AddVoting(VotingCreateRequestDto voting) : Task<IActionResult>
        + StartsAtVoting(long id, DateTime startsAt) : Task<IActionResult>
        + EndAtVoting(long id, DateTime endsAt) : Task<IActionResult>
        + StartVoting(long id) : Task<IActionResult>
        + DeleteVoting(long id) : Task<IActionResult>
        + GetAllVotes(long id) : Task<IActionResult>
    }

    "ChoiceController" --|> "ControllerBase"
    "UserController" --|> "ControllerBase"
    "VoteController" --|> "ControllerBase"
    "VotingController" --|> "ControllerBase"
    "HealthController" ..|> "IHealthCheck"
}

@enduml
